--- a/Discussion/ev2WriteUp.tex
+++ b/Discussion/ev2WriteUp.tex
@@ -37,7 +37,7 @@
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
-
+\newcommand{\dcomment}[1]{\textcolor{red}{#1}}
 \lstset{frame=, %tb
   language=Java,
   aboveskip=1mm,
@@ -145,15 +145,19 @@ The overarching design principle we wanted to achieve was modularity. In doing s
 \section{Back End Design and Analysis}
 \subsection{New Features}
 
-The back-end introduced sharing on an event granularity through event invitation, request objects, and PUDs.  Also, we introduced a powerful new tool called deepPopulate.\\~\\
-\noindent DeepPopulate is a mongoose plugin that allows us to do deep population of nested models.  During the development of evolution 1, we were unable to deep populate and instead resorted to levels of callbacks on callbacks in a ham fisted attempt to populate down more than 1 level of a mongoose model.  For example, when returning a Calendar to the front end, we would first query for a user, populate its calendars, and for each Calendar we would query for the events, owner, and rules within callbacks and add them to the JSON object to return.  We could continue deep populating this way, but the levels of callbacks made the code incredibly challenging.  DeepPopulate allowed us to populate multiple fields from a model at whatever depth we desired in 1 line.  This sped up production and gave us incredible flexibility in how we package information to send to the front end.\\~\\
-\noindent While designing requests and redesigning events, we realized that they are very much tied together.  When a new event is created, a matching request object is also created alongside it.  This request object holds all of the information about which users have been invited to edit the event and their statuses: pending, accepted, denied, rejected.  When a user is invited to an event, the \_id for the request is added to the user's 'eventRequest' field.  The requests in a user's ?eventRequest' field are all of the pending requests that the user must respond to.  Upon accepting a request, a copy of the original event is created and placed in the calendar of the accepting user's choosing.  This copy is a stand alone event with similar information to the original event.  That way, when an edit is made to the original event, the copy is not altered until the user accepts the edits.\\
+\dcomment{Dont write backslashes, just put a blank line between paragraphs.  If you want to adjust the spacing, set parskip.}
 
-\noindent The ability to create an event that is persistent until done (PUD) was another major addition in functionality to the calendar. At first, we wanted to try and reuse our Event schema to handle the PUDs, but one of the requirements (requirement g) forced us to decouple them. Hence, we created a new model for the PUD completely. \\
+The back-end introduced sharing on an event granularity through event invitation, request objects, and PUDs.  Also, we introduced a powerful new tool called deepPopulate.
+
+\noindent DeepPopulate is a mongoose plugin that allows us to do deep population of nested models.  During the development of evolution 1, we were unable to deep populate and instead resorted to levels of callbacks on callbacks in a ham\dcomment{-}fisted attempt to populate down more than 1 level of a mongoose model.  For example, when returning a Calendar to the front end, we would first query for a user, populate its calendars, and for each Calendar we would query for the events, owner, and rules within callbacks and add them to the JSON object to return.  We could continue deep populating this way, but the levels of callbacks made the code incredibly challenging.  DeepPopulate allowed us to populate multiple fields from a model at whatever depth we desired in 1 line.  This sped up production and gave us incredible flexibility in how we package information to send to the front end.
+
+\noindent While designing requests and redesigning events, we realized that they are very much tied together.  When a new event is created, a matching request object is also created alongside it.  This request object holds all of the information about which users have been invited to edit the event and their statuses: pending, accepted, denied, rejected.  When a user is invited to an event, the \_id for the request is added to the user's 'eventRequest' field.  The requests in a user's \dcomment{'}eventRequest' field are all of the pending requests that the user must respond to.  Upon accepting a request, a copy of the original event is created and placed in the calendar of the accepting user's choosing.  This copy is a stand alone event with similar information to the original event.  That way, when an edit is made to the original event, the copy is not altered until the user accepts the edits.
+
+\noindent The ability to create an event that is persistent until done (PUD) was another major addition in functionality to the calendar. At first, we wanted to try \dcomment{to} reuse our Event schema to handle the PUDs, but one of the requirements (requirement g) forced us to decouple them. Hence, we created a new model for the PUD completely \dcomment{(elaborate?)}. \\
 
 \noindent Although we were not able to completely reuse the code from the Event, we were able to reuse the Alert type we created in the first evolution with some minor additions to the schema definition. This allowed us to call our Alert constructor when a PUD event was created and email handling would happen automatically without any changes (email handling happens in {\tt alertRoutes.js}. Apart from some refactorings to make the code cleaner, this file did not change much.\\
 
-\noindent PUDs can also be set to repeat at a certain interval (we elected to allow the user to select this repeat on the a day count granularity, 7 would be for weekly). The {\tt repeatInterval} property in the PUD schema held this information and is set upon creation. Upon completion, our server code checks to see if an interval has been set. If so, the {\tt date} property is updated accordingly and the PUD is perserved in the database. This PUD will not appear on the users To-Do list until this new date, because the GET request for the To-Do section filters out any date that does not precede the current time.
+\noindent PUDs can also be set to repeat at a certain interval (we elected to allow the user to select this repeat on the a day count granularity, 7 would be for weekly). The {\tt repeatInterval} property in the PUD schema held this information and is set upon creation. Upon completion, our server code checks to see if an interval has been set. If so, the {\tt date} property is updated accordingly and the PUD is \dcomment{preserved} in the database. This PUD will not appear on the users To-Do list until this new date, because the GET request for the To-Do section filters out any date that does not precede the current time.
 
 \subsection{Benefits of Our Previous Design}
 
@@ -175,7 +179,7 @@ Our previous design had event sharing on a calendar granularity.  For example, o
 
 \noindent The rest of the code changes involved refactoring large functions, organizing the code more logically, implementing modals for UI experience, providing more auto-filled inputs, and caching data locally. The lingering problems in the design after these changes are the overuse of \$rootScope (a global scope for Angular) and the increasing size of our modal controller. The first problem is due in part to the scoping of Angular. If we wish to pass a value from one scope to another, it is impossible without passing it through the root scope. However, the root scope does not actually have knowledge of any of its child scopes, so the data passed must be stored in a global scope in order to transfer. The other problem of the scope of the modal controller can be fixed by decomposing the controller since the constituent parts are very loosely connected.\\
 
-\noindent The choice of caching and updating the data locally in conjunction with database updates has come with some benefits and some detriments. For user experience and future use, keeping and updating the data locally drastically reduces the amount of GET requests sent and parsed to maintain data consistency. However, this comes at the cost of increasing the code considerably for the client. Instead of requesting and re-displaying all of the data, the data on local copies must be manually updated to ensure that the user sees values consistent with the database. This will add to development time in the future.\\
+\noindent The choice of caching and updating the data locally in conjunction with database updates has come with some benefits and some detriments. For user experience and future use, keeping and updating the data locally drastically reduces the \dcomment{number} of GET requests sent and parsed to maintain data consistency. However, this \dcomment{reduction} comes at the cost of increasing the code considerably for the client. Instead of requesting and re-displaying all of the data, the data on local copies must be manually updated to ensure that the user sees values consistent with the database. This will add to development time in the future.\\
 
 \noindent Finally, the Jade template for our single-page site has been growing considerably. Almost all of the relevant HTML for the calendar page is within a single file. If possible, the created modals may need to be moved into their own HTML files, and the sidebars should be converted into UI routes for Angular to better organize the HTML. As it is now, future development will become harder the more we are required to sift through the file for details.\\
 
@@ -185,15 +189,15 @@ Our previous design had event sharing on a calendar granularity.  For example, o
 \begin{enumerate} [a)]
 \item  {\bf Designing and Conducting Experiments}
 \begin{enumerate} [$\cdot$]
-\item A special feature of javascript in general is that it is asynchronous. To deal with this asynchronous nature of the code, callback functions are used. However, multiple callback functions with callback functions (also known as callback hell) makes it harder to find bugs and/or simply read the code. I researched the use of promises alongside mongoDB and Mongoose. After researching, I then tested the promise implementation--accessing the database with a promise and utilizing the exposed promise API. Minor kinks were worked out, but Peter and I were able to clean up some of our code with promises from then on.
+\item A special feature of javascript in general is that it is asynchronous. To deal with this asynchronous nature of the code, callback functions are used. However, multiple callback functions with callback functions (also known as callback hell) makes it harder to find bugs and/or simply read the code. I researched the use of promises alongside mongoDB and Mongoose. After researching, I then tested the promise implementation--accessing the database with a promise and utilizing the exposed promise API. Minor kinks were worked out, but Peter and I were able to clean up some of our code with promises from then on. \dcomment{(this describes research, but not so much an experiment).}
 \end{enumerate}
 \item  {\bf Analyzing and Interpreting Data}
 \begin{enumerate} [$\cdot$]
-\item At times, router methods we wrote did not behave properly, and by that I mean that certain errors were thrown to the console. Different HTTP error codes made up the majority of these errors, so I had to interpret what the server was telling me in order to both find the problem and determine what the best solution would be. One example of this that comes to mind was a server 500 response we were getting from issuing a PUT to the {\tt /pud/reorder} endpoint. After analyzing more console outputs, I was able to find that the Express router treats {\tt /pud/reorder} and {\tt /pud/:pudID} (which is a query parameter) as the same, so both routes were being run. 
+\item At times, router methods we wrote did not behave properly, and by that I mean that certain errors were thrown to the console. Different HTTP error codes made up the majority of these errors, so I had to interpret what the server was telling me in order to both find the problem and determine what the best solution would be. One example of this that comes to mind was a server 500 response we were getting from issuing a PUT to the {\tt /pud/reorder} endpoint. After analyzing more console outputs, I was able to find that the Express router treats {\tt /pud/reorder} and {\tt /pud/:pudID} (which is a query parameter) as the same, so both routes were being run \dcomment{(strange?)}. 
 \end{enumerate}
 \item {\bf Designing System Components}
 \begin{enumerate} [$\cdot$]
-\item One new component I designed in the back-end was the PUD. We, as a group, wanted to integrate the PUD into the overall project and specific events without much change to existing code. With that in mind, I made the PUD a separate document type in our database, BUT it shared some of the pre-existing functionality we had developed for alerts and repeats. I was able to reuse a lot of code by using the ‘populate’ as well as the Alert schema to handle such things. An interesting requirement for the PUD was that you could set a time interval (i.e. weekly for the repeat), yet, once the PUD was marked complete, you wouldn’t want it to immediately show up in the list of outstanding PUDs. This was solved by editing the “GET /pud” method to check the {\tt createdDate} for each PUD. 
+\item One new component I designed in the back-end was the PUD. We, as a group, wanted to integrate the PUD into the overall project and specific events without much change to existing code. With that in mind, I made the PUD a separate document type in our database, BUT it shared some of the pre-existing functionality we had developed for alerts and repeats. I was able to reuse a lot of code by using the ‘populate’ \dcomment{(Im not sure what the weird chars are for here?)} as well as the Alert schema to handle such things. An interesting requirement for the PUD was that you could set a time interval (i.e. weekly for the repeat), yet, once the PUD was marked complete, you wouldn’t want it to immediately show up in the list of outstanding PUDs. This was solved by editing the “GET /pud” method to check the {\tt createdDate} for each PUD. 
 \end{enumerate}
 \item {\bf Dealing with Realistic Contraints}
 \begin{enumerate} [$\cdot$]
@@ -201,7 +205,7 @@ Our previous design had event sharing on a calendar granularity.  For example, o
 \end{enumerate}
 \item  {\bf Teamwork and Team Member Interaction}
 \begin{enumerate} [$\cdot$]
-\item Peter and I worked very together on the backend, and, as a whole, I thought our group worked much better together than we did through the first evolution. I was able to work on new features concurrently with the rest of the group, meeting occasionally to make sure there were no design misunderstandings or any small typo-like bugs that would cause integration problems down the development path.
+\item Peter and I worked very \dcomment{closely} together on the backend, and, as a whole, I thought our group worked much better together than we did through the first evolution. I was able to work on new features concurrently with the rest of the group, meeting occasionally to make sure there were no design misunderstandings or any small typo-like bugs that would cause integration problems down the development path.
 \end{enumerate}
 \end{enumerate}
 
@@ -239,7 +243,7 @@ Our previous design had event sharing on a calendar granularity.  For example, o
 \end{enumerate}
 \item  {\bf Analyzing and Interpreting Data}
 \begin{enumerate} [$\cdot$]
-\item One thing that was causing problems was the object that the Calendar data was returned to us on the front-end versus the object that we used to pass into the Angular Calendar we were using. These are slightly different since the Angular Calendar requires some extra fields so we made a wrapper around the back-end Calendar object. Because of this, when we were redesigning the display for a section, we mixed up the two objects which caused the calendar application to not render correctly since it was missing data. This was solved by looking through the database objects for the calendars and comparing that to the log of the objects before and after refreshing the page. We soon found that we were setting the wrong object on the front-end for the Angular Calendar and a small change fixed the problem.
+\item One thing that was causing problems was the object that the Calendar data was returned to us on the front-end versus the object that we used to pass into the Angular Calendar we were using. These are slightly different since the Angular Calendar requires some extra fields so we made a wrapper around the back-end Calendar object. Because of this \dcomment{wrapper (?)}, when we were redesigning the display for a section, we mixed up the two objects which caused the calendar application to not render correctly since it was missing data. This was solved by looking through the database objects for the calendars and comparing that to the log of the objects before and after refreshing the page. We soon found that we were setting the wrong object on the front-end for the Angular Calendar and a small change fixed the problem.
 \end{enumerate}
 \item {\bf Designing System Components}
 \begin{enumerate} [$\cdot$]
@@ -260,7 +264,7 @@ Our previous design had event sharing on a calendar granularity.  For example, o
 \begin{enumerate} [a)]
 \item  {\bf Designing and Conducting Experiments}
 \begin{enumerate} [$\cdot$]
-\item The asynchronous nature of javascript has been both a very powerful feature and an absolute nuisance for our group.  During the development of evolution 1, Parker and I tried several work arounds of javascript's asynchronous callback functions.  With our workarounds with nested callbacks and whatnot, our code was functional but becoming increasingly messier and harder to read.  While refactoring the code base for evolution 2, we decided to go more in depth with ?promises'.  I did research on promises, tested the functionality of promises, and ultimately added promises to the code in order to clean up what we called 'call-back hell'
+\item The asynchronous nature of javascript has been both a very powerful feature and an absolute nuisance for our group.  During the development of evolution 1, Parker and I tried several work arounds of javascript's asynchronous callback functions.  With our workarounds with nested callbacks and whatnot, our code was functional but becoming increasingly messier and harder to read.  While refactoring the code base for evolution 2, we decided to go more in depth with \dcomment{'}promises'.  I did research on promises, tested the functionality of promises, and ultimately added promises to the code in order to clean up what we called 'call-back hell'. \dcomment{(this describes research, but not so much an experiment).}
 \end{enumerate}
 \item  {\bf Analyzing and Interpreting Data}
 \begin{enumerate} [$\cdot$]
